# imgclean

./: .gitignore
.github/workflows/: tests.yml
paper/: literature.bib  paper.tex
project/: .clang-format  .gitignore  CMakeLists.txt  build-and-test.sh  build.sh
project/include/catch2/: CMakeLists.txt
project/include/imgclean/: FileHandler.hpp  FilePath.hpp  GSImage.hpp  ImageFormat.hpp  ImgClean.hpp  PPMImage.hpp
project/include/imgclean/processors/: HelperProcessor.hpp  ImageBinarizationProcessor.hpp  IntegralImageProcessor.hpp
project/res/: 3x3-test.ppm
project/src/: FileHandler.cpp  ImgClean.cpp  Main.cpp  main.cpp
project/src/processors/: ImageBinarizationProcessor.cpp  IntegralImageProcessor.cpp
project/test/: FileHandler.test.cpp  catch_main.cpp  example_test.cpp
